# multiplay-chess

./: .clang-format  .clang-format-ignore  .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  UI.c  build.sh  docker-compose.yml  run.sh  run_multiple_clients.sh  test-client.py  test_network  test_network.c  watch_logs.sh
.cursor/rules/: rule.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-and-test.yml  build.yml
client/: CMakeLists.txt  README.md  client.c  client_network.c  client_network.h  client_state.c  client_state.h  echo-client.c  game_save.c  game_save.h  game_state.c  game_state.h  logger.c  logger.h  main.c  pgn.c  pgn.h  pgn_save.c  pgn_save.h  replay.c  replay.h  replay_menu.c  replay_menu.h  test-client.c  timer.c  timer.h  ui.h  ui_chat.c  ui_core.c  ui_input.c  ui_screens.c
client/handlers/: cancel_match.c  chat.c  chat_handler.c  check.c  disconnect.c  dispatcher.c  echo_handler.c  error.c  error_handler.c  handlers.h  match.c  match_handler.c  move.c  ping.c  ping_handler.c  resign.c
client/ui/: chat.c  colors.c  colors.h  core.c  game_screen.c  input.c  main_screen.c  matching_screen.c  replay_menu.c  screens.c  ui.h
common/: CMakeLists.txt  PROTOCOL.md  common.c  common.h  config.h  error_codes.h  logger.c  logger.h  network.c  network.h  pgn.c  pgn.h  pgn_save.h  piece.c  piece.h  protocol.md  protocol_utils.c  protocol_utils.h  replay.c  rule.c  rule.h  types.h  ui_constants.h  utils.c  utils.h
common/proto/: message.proto
replay/: game_1_vs_2.pgn  hex.pgn
replays/: sample.pgn
server/: CMakeLists.txt  Dockerfile  README.md  README_ARCHITECTURE.md  docker-run.sh  main.c  match_manager.c  match_manager.h  network.c  protocol.c  protocol.h  rule_test.c  server  server.c  server_network.c  server_network.h
server/handlers/: cancel_match.c  chat.c  dispatcher.c  echo.c  echo_handler.c  game.c  game_handler.c  handlers.h  match.c  match_handler.c  match_manager.c  match_manager.h  move.c  ping.c  ping_handler.c  resign.c  timeout.c
